[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_hud.gd" id=1]
[ext_resource type="Script" path="res://scripts/ui/variable_display.gd" id=2]
[ext_resource type="Script" path="res://scripts/ui/event_log.gd" id=3]

[node name="MainHUD" type="CanvasLayer"]
script = ExtResource(1)

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Root"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopRow" type="HBoxContainer" parent="Root/VBox"]
size_flags_vertical = 3

[node name="GridDisplay" type="Panel" parent="Root/VBox/TopRow"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridLabel" type="Label" parent="Root/VBox/TopRow/GridDisplay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
text = "GRID DISPLAY"

[node name="RightPanel" type="HBoxContainer" parent="Root/VBox/TopRow"]
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="ButtonsPanel" type="Panel" parent="Root/VBox/TopRow/RightPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsContainer" type="VBoxContainer" parent="Root/VBox/TopRow/RightPanel/ButtonsPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ToggleGridButton" type="Button" parent="Root/VBox/TopRow/RightPanel/ButtonsPanel/ButtonsContainer"]
text = "Toggle Grid"

[node name="VariableDisplay" type="Panel" parent="Root/VBox/TopRow/RightPanel"]
size_flags_horizontal = 1
size_flags_vertical = 3
script = ExtResource("2")

[node name="Stats" type="GridContainer" parent="Root/VBox/TopRow/RightPanel/VariableDisplay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="BottomRow" type="HBoxContainer" parent="Root/VBox"]
size_flags_vertical = 1

[node name="EventLog" type="Panel" parent="Root/VBox/BottomRow"]
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="EventLogLabel" type="RichTextLabel" parent="Root/VBox/BottomRow/EventLog"]
script = ExtResource("3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
scroll_active = true
autowrap_mode = 2
text = ""

[node name="BottomButtons" type="Panel" parent="Root/VBox/BottomRow"]
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BottomButtonsContainer" type="VBoxContainer" parent="Root/VBox/BottomRow/BottomButtons"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseButton" type="Button" parent="Root/VBox/BottomRow/BottomButtons/BottomButtonsContainer"]
text = "Pause"

[node name="EndTurnButton" type="Button" parent="Root/VBox/BottomRow/BottomButtons/BottomButtonsContainer"]
text = "End Turn"

[node name="ConfirmEndTurn" type="ConfirmationDialog" parent="Root"]
dialog_text = "End the current turn?"

[node name="MessageDialog" type="AcceptDialog" parent="Root"]
title = "Notice"
